Updated docker images and compose with new source directory names

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     tty: true
     stdin_open: true
     volumes:
-      - ./src:/tbma-gnas/src
+      - ./tbma_gnas:/tbma_gnas
     deploy:
       resources:
         reservations:
